# desk_agent

./: Cargo.toml  README.md  rust-toolchain
src/: agents.rs  app.rs  app_state.rs  components.rs  config.rs  enums.rs  lib.rs  main.rs  ollama_state.rs  tools.rs  utils.rs
src/agents/: chat.rs  images.rs  websearch.rs
src/components/: agent_panel.rs  agents_panel.rs  bottom_panel.rs  chat_input.rs  main_panel.rs  messages.rs  ollama_settings.rs  top_menu.rs
