[package]
name = "desk_ass"
version = "0.1.0"
authors = ["chleba <chlebik@gmail.com>"]
edition = "2021"
include = ["**/*.rs", "Cargo.toml"]
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    # "wayland",       # To support Linux (and CI)
    "x11",           # To support Linux X11
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }

env_logger = "0.11"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
image = "0.25.5"
egui_inbox = { version = "0.7.0", features = ["broadcast", "tokio", "type_broadcast"] }
reqwest = { version = "0.12.12", features = ["json"] }
egui_form = { version = "0.4.0", features = ["validator_garde"] }
garde = { version = "0.20.0", features = ["derive"] }
egui_flex = "0.2.0"
tokio = { version = "1.43.0", features = ["time", "rt", "macros"] }
futures = "0.3.31"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

